--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_nav_map">Map</string>
+    <string name="txt_nav_list">List</string>
+    <string name="txt_nav_about">About</string>
+    <string name="txt_nav_setting">Settings</string>
 </resources>
