--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="mi_filter">Filter</string>
     <string name="pu_musea">Musea</string>
     <string name="pu_streetart">Streetart</string>
-    <string name="pu_graffiti">Graffiti</string>
+    <string name="pu_comic">Comic</string>
+    <string name="pu_all">All</string>
+    <string name="txt_distance">3.25\\nkm</string>
 </resources>
