--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">XploreBXL</string>
+    <string name="txt_nav_item_update_data">更新数据</string>
+
+    <string name="app_name">游览布鲁塞尔</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -8,31 +11,31 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="txt_nav_map">Map</string>
-    <string name="txt_nav_list">List</string>
-    <string name="txt_nav_about">About</string>
+    <string name="txt_nav_map">地图</string>
+    <string name="txt_nav_list">博物馆</string>
+    <string name="txt_nav_about">关于</string>
     <string name="txt_nav_setting">Settings</string>
     <string name="btn_website">WEBSITE</string>
     <string name="btn_favorites">ADD TO FAVORITES</string>
     <string name="txt_button_lvstreetart">Streetart</string>
     <string name="txt_buton_lvMusea">Musea</string>
     <string name="txt_btn_lv_streetart">Streetart</string>
-    <string name="txt_nav_item_list_streetart">List of Streetart</string>
-    <string name="txt_nav_list_comics">List of comic book murals</string>
+    <string name="txt_nav_item_list_streetart">街头艺术</string>
+    <string name="txt_nav_list_comics">漫画壁画</string>
     <string name="mi_filter">Filter</string>
-    <string name="pu_musea">Musea</string>
-    <string name="pu_streetart">Streetart</string>
-    <string name="pu_comic">Comic</string>
-    <string name="pu_all">All</string>
-    <string name="txt_distance">3.25\\nkm</string>
+    <string name="pu_musea">博物馆</string>
+    <string name="pu_streetart">街头艺术</string>
+    <string name="pu_comic">漫画壁画</string>
+    <string name="pu_all">所有</string>
+    <string name="txt_distance">3.25\\n公里</string>
 
     <string name="title_activity_launcher">LauncherActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="txt_nav_item_update_data">Update Data</string>
 
-    <string name="txt_toast_update_data">Updating Data...</string>
+    <string name="txt_toast_update_data">加载中...</string>
 
-    <string name="txt_detail_illustrator">Illustrator: </string>
-    <string name="txt_detail_featuring">Feat. </string>
+    <string name="txt_detail_illustrator">插图作者: </string>
+    <string name="txt_detail_featuring">主角: </string>
+
 </resources>
